# serverless-family-recipes-bidirectional-nova-sonic

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  auth.js  aws-credentials.js  main.jsx  websocket-presigned.js
frontend/src/audio/: audio-player-processor.js  audioUtils.js
frontend/src/components/: AuthScreen.jsx  VoiceChat.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useAudioCapture.js  useAudioPlayback.js  useVoiceSession.js
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/auth/: main.tf  outputs.tf  variables.tf
infrastructure/modules/bedrock/: main.tf  outputs.tf  variables.tf
infrastructure/modules/cdn/: main.tf  outputs.tf  variables.tf
infrastructure/modules/container/: main.tf  outputs.tf  variables.tf
infrastructure/modules/storage/: main.tf  outputs.tf  variables.tf
src/: .dockerignore  Dockerfile  config.py  requirements.txt  server.py
src/tools/: __init__.py  nutrition_lookup.py  recipe_search.py  set_timer.py  unit_converter.py
