[project]
name = "bidir-streaming-voice-agent"
version = "0.1.0"
description = "Voice-controlled kitchen assistant using Strands BidiAgent and Amazon Nova Sonic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents[bidi-all]>=1.26.0",
    "boto3>=1.35.0",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
